[package]
name = "ghostie"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ghostie"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.60"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
clokwerk = { git = "https://github.com/attriaayush/clokwerk" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = "0.28.0"
dirs = "4.0.0"
clap = { version = "3.2.17", features = ["derive"] }
tui = "0.19"
crossterm = "0.25"
chrono = { version = "0.4.19", default-features = false, features = ["serde", "clock"] }
open = "3.0.2"
daemonize = "0.4.1"
sysinfo = "0.26.6"
cfg-if = "1.0"
futures = "0.3"
dialoguer = "0.10.2"
reqwest = { version = "0.11.12", features = ["json"] }
thiserror = "1.0"
which_crate = { version = "~4.1", package = "which" }
regex = "1.7"

[dev-dependencies]
fake = "2.5"
rand = "0.8"
serial_test = "0.9.0"

[target.'cfg(target_os = "macos")'.dependencies]
notify-rust = "~4.5"

[profile.release]
lto = true

[profile.dev]
opt-level = 3
